[package]
name = "smux"
version = "0.4.0"
authors = ["black-binary <blackbinary@qq.com>", "Zhang Maiyun <me@myzhangll.xyz"]
description = "Asynchronous smux multiplexing library"
license = "MIT"
edition = "2021"
repository = "https://github.com/myzhang1029/smux"
keywords = ["smux", "multiplexing", "async"]
categories = ["asynchronous", "network-programming"]

[dependencies]
bytes = "1"
futures = "0.3"
log = "0.4"
rand = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "macros", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
